test/k8s/manifests/cnp-ingress-from-cidr-to-ports.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-ingress-from-cidr-to-ports"
spec:
  description: "Policy to allow traffic external to cluster inwards via CIDR and port"
  endpointSelector:
    matchLabels:
      zgroup: testDS
  ingress:
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
    fromCIDR:
      - 192.168.56.13/32
